refactor Perpetrator
