# src/main/kotlin/ch/ejpd/example/precrime/infrastructure/integration/persistence/JooqPreApologyRepository.kt
@@ -1,7 +1,6 @@
 package ch.ejpd.example.precrime.infrastructure.integration.persistence
 
 import ch.ejpd.example.precrime.domain.apology.*
-import ch.ejpd.example.precrime.domain.vision.Perpetrator
 import ch.ejpd.example.precrime.infrastructure.integration.persistence.jooq.tables.references.PRE_APOLOGY
 import org.jooq.DSLContext
 import org.jooq.Record
@@ -33,8 +32,7 @@ class JooqPreApologyRepository(
             dsl.insertInto(PRE_APOLOGY)
                 .set(PRE_APOLOGY.ID, apology.id)
                 .set(PRE_APOLOGY.VISION_ID, apology.visionId)
-                .set(PRE_APOLOGY.FIRST_NAME, apology.perpetrator.firstName)
-                .set(PRE_APOLOGY.LAST_NAME, apology.perpetrator.lastName)
+                .set(PRE_APOLOGY.PERPETRATOR_ID, apology.perpetratorId)
                 .set(PRE_APOLOGY.BASE_AMOUNT, BigDecimal.valueOf(apology.compensation.baseAmount))
                 .set(PRE_APOLOGY.JETPACK_FUEL_DEDUCTION, BigDecimal.valueOf(apology.compensation.jetpackFuelDeduction))
                 .set(PRE_APOLOGY.HALO_RENTAL_FEE, BigDecimal.valueOf(apology.compensation.haloRentalFee))
@@ -55,7 +53,7 @@ class JooqPreApologyRepository(
     private fun Record.toPreApology() = PreApology(
         id = get(PRE_APOLOGY.ID)!!,
         visionId = get(PRE_APOLOGY.VISION_ID)!!,
-        perpetrator = Perpetrator(get(PRE_APOLOGY.FIRST_NAME)!!, get(PRE_APOLOGY.LAST_NAME)!!),
+        perpetratorId = get(PRE_APOLOGY.PERPETRATOR_ID)!!,
         compensation = Compensation(
             baseAmount = get(PRE_APOLOGY.BASE_AMOUNT)!!.toDouble(),
             jetpackFuelDeduction = get(PRE_APOLOGY.JETPACK_FUEL_DEDUCTION)!!.toDouble(),
